plugins {
    id "java"
    id "com.github.johnrengelman.shadow" version "7.1.2" //Dependency shadow
}

//Plugin information
group 'com.thevoxelbox.voxelsniper'
version '6.2.0-SNAPSHOT'

//Minecraft API variable
ext {
    minecraftAPI = '1.18.2-R0.1-SNAPSHOT'
}

defaultTasks 'build'

//Java version
sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

//Dependencies repositories
repositories {
    mavenCentral()
    //PaperMC
    maven {
        name 'papermc'
        url 'https://repo.papermc.io/repository/maven-public/'
    }
}

//Dependencies
dependencies {
    implementation group: 'io.papermc.paper', name: 'paper-api', version: "${minecraftAPI}" //Minecraft
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
    testImplementation 'org.hamcrest:hamcrest-library:2.2'
    testCompileOnly 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testImplementation 'org.mockito:mockito-core:4.5.1'
}

//Tasks
tasks.compileJava {
    options.compilerArgs = ["-parameters"]
    options.encoding = 'UTF-8'
}

//Shadowing dependencies
shadowJar {
    archiveClassifier.set('')
    manifest {
        attributes(
                'Main-Class': {group}
        )
    }
}

//Shadow
artifacts {
    archives shadowJar
}

test {
    useJUnitPlatform()
}

build.dependsOn(shadowJar)
